# microphone-asr

./: .gitignore  README.md  example.env  pyproject.toml  recorder.py  requirements.txt
src/common/config/: settings.py  state.py
src/common/database/: orm.py  repository.py  unit_of_work.py
src/common/domain/: base.py  record.py
src/common/utils/: time_formatter.py
src/recorder/: handler.py
src/transcriber/handlers/: concat.py
